<resources>
    <string name="app_name">Connexus</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">Connexus!</string>

    <string name="take_picture">take pictures!</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <string name="choose_from_library">Choose from library</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <string name="use_camera">Use Camera</string>

    <string name="upload_hint">description</string>

    <string name="title_activity_upload">upload</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <string name="search_reminder">stream name</string>

    <!--Button Texts-->
    <string name="view_all_btn">View All Streams</string>

    <string name="ws_base_url">http://ee382v-apt-connexus.appspot.com/</string>

    <string name="search_btn">Search</string>

    <string name="subscribed_stream_btn">My Subscribed Streams</string>

    <string name="upload_img_btn">Upload an Image</string>

    <string name="back_streams">Back to Streams</string>

    <string name="more_img_btn">More Images</string>
    <string name="prev_img_btn">Previous Images</string>

    <string name="nearby_btn">Nearby</string>

    <string name="upload_img_txt">Upload an image</string>

</resources>
