<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey_700"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.utexas.ece.ee382v.connexus.ViewAllStreamsActivity">

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnWidth="90dp"
        android:numColumns="4"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/search_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/search_reminder"
        android:layout_below="@id/gridview"
        android:layout_alignParentLeft="true"

        />

    <Button
        android:id="@+id/search_btn"
        android:text="@string/search_btn"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/gridview"
        android:layout_alignParentRight="true"
        />

    <Button
        android:id="@+id/subscribed_stream_btn"
        android:text="@string/subscribed_stream_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_text"
        />


</RelativeLayout>
